--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "gsap": "^3.12.5",
         "next": "14.2.8",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-scroll-parallax": "^3.4.5",
+        "split-type": "^0.3.4",
+        "tailwindcss-animated": "^1.1.2"
     },
     "devDependencies": {
         "@types/node": "^20",
