--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "gsap": "^3.12.5",
+        "lucide-react": "^0.441.0",
         "next": "14.2.8",
         "react": "^18",
         "react-dom": "^18",
