--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "dotenv": "^16.4.5",
         "gsap": "^3.12.5",
         "lucide-react": "^0.441.0",
         "next": "14.2.8",
         "react": "^18",
         "react-dom": "^18",
+        "react-google-recaptcha": "^3.1.0",
         "react-scroll-parallax": "^3.4.5",
         "split-type": "^0.3.4",
         "tailwindcss-animated": "^1.1.2"
@@ -22,6 +24,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-google-recaptcha": "^2.1.9",
         "autoprefixer": "^10.4.20",
         "eslint": "^8",
         "eslint-config-next": "14.2.8",
